@@ -2,6 +2,7 @@ Revision history of Alt-Data-Frame-ButMore
 
 0.0050_01   TBD
     - Fix PDL::Factor's repeat() method.
+    - Explainations for Data::Frame::Examples's datasets.
 
 0.0049      2019-05-05
     - Fix a severe memory leak.
